--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -9,7 +9,8 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let pais of paises, index as i">
+        <tr *ngFor="let pais of paises, index as i"
+            class="animate__animated animate__fadeIn">
             <td>{{ i + 1}}</td>
             <td><img [src]="pais.flags.png" alt="" class="small-flag"></td>
             <td>{{pais.capital}} , {{pais.name}}</td>
