--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,15 +1,18 @@
-<h2>Por Capital</h2>
-<hr>
-
-<div class="row">
-    <div class="col">
-        <app-pais-input
-           (onEnter)="buscar($event)"
-           (onDebounce)="sugerencias($event)"
-           placeholder="Buscar capital...">
-        </app-pais-input>
-    </div>
+<div class="animate__animated animate__fadeIn animate_faster"> 
+    <h2>Por Capital</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-pais-input
+               (onEnter)="buscar($event)"
+               (onDebounce)="sugerencias($event)"
+               placeholder="Buscar capital...">
+            </app-pais-input>
+        </div>
+    </div>  
 </div>
+
 
 <hr>
 <div  *ngIf="hayError"  class="alert alert-danger">
