--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,4 +1,5 @@
-<h2>Por Pais</h2>
+<div class="animate__animated animate__fadeIn animate_faster">
+    <h2>Por Pais</h2>
 <hr>
 
 <div class="row">
@@ -10,6 +11,24 @@
         </app-pais-input>
     </div>
 </div>
+</div>
+    
+    <ul *ngIf="mostrarSugeridos"
+        class="list-group">
+        <li *ngFor="let pais of paisesSugeridos"
+            class="list-group-item list-group-item-action">
+           <a class="nav-link" 
+            [routerLink]="['/pais', pais.alpha2Code]">
+            {{pais.name}}
+            </a>
+        </li>
+        <li class="list-group-item list-group-item-action"
+            (click)="buscarSugerido( termino)">
+             <a class="nav-link">
+               Buscar "{{termino | titlecase}}"
+            </a>
+    </li>
+    </ul>
 
 <hr>
 <div  *ngIf="hayError"  class="alert alert-danger">
